updated index file

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <title>ecommerce website</title>
 <body>
 <h1>Welcome to E-commerce website</h1>
+<h2>This ecommerce is one of the popular company.<h2>
 </body>
 </html>
